# Email_Segregator_Agent

./: README.md  agent.py  app.py  main.py  memory.py  preprocessing.py  pyproject.toml  train.ipynb
